<resources>
    <string name="app_name">AndroidViewsApp</string>
    <string name="textview_1">Text View 1</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="empty">Empty</string>
    <string name="move_to_recycler_view">Move to Recycler View</string>
    <string name="move_to_fragments">Move to Fragment view</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="open_calculator">Open Calculator</string>
    <string name="error">Error</string>
    <string name="open_input_form">Open Input form</string>
</resources>
